@@ -1,3 +1,9 @@
+2013-02-09  Jakub Jelinek  <jakub@redhat.com>
+
+	PR other/56245
+	* regex.c (PTR_INT_TYPE): Define.
+	(EXTEND_BUFFER): Change incr type from int to PTR_INT_TYPE.
+
 2013-01-31  Kai Tietz  <ktietz@redhat.com>
 
 	PR other/54620
